--- a/loader/nbproject/project.properties
+++ b/loader/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IndyCrawlerLoader
+application.vendor=djunior
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IndyCrawlerLoader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.IndyCrawlerUtils.jar=../IndyCrawlerUtils/dist/IndyCrawlerUtils.jar
+file.reference.IndyCrawlerUtils.jar=../lib/IndyCrawlerUtils.jar
+file.reference.mysql-connector-java-5.1.35-bin.jar=../lib/mysql-connector-java-5.1.35-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
     ${file.reference.IndyCrawlerUtils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
