Adding properties file to IndyCrawlerLoader, and cleaning up exception stack trace in IndyCrawler

--- a/crawler/src/com/djunior/indycrawler/crawler.properties
+++ b/crawler/src/com/djunior/indycrawler/crawler.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-OUTPUT_FILE=/Users/djunior/NetbeansProjects/IndyCrawler/res/eventList.xml
+OUTPUT_FILE=/tmp/IndyCrawler/eventList.xml
 CRAWL_STORAGE_FOLDER=/tmp/IndyCrawler/
 NUMBER_OF_CRAWLERS=20
-#PROXY_HOST=146.164.70.1
-#PROXY_PORT=3128
+PROXY_HOST=146.164.70.1
+PROXY_PORT=3128
